WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
306625
[threaded-animations] several scroll-animations tests crash as a result of changing timelines with "Threaded Time-based Animations" enabled
https://bugs.webkit.org/show_bug.cgi?id=306625
Summary
[threaded-animations] several scroll-animations tests crash as a result of ch...
Antoine Quint
Reported
2026-01-30 09:42:55 PST
The following WPT tests with "Threaded Time-based Animations" enabled: - scroll-animations/css/timeline-offset-in-keyframe-change-timeline.tentative.html - scroll-animations/scroll-timelines/setting-timeline.tentative.html - scroll-animations/view-timelines/timeline-offset-in-keyframe.html
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-01-30 09:43:03 PST
<
rdar://problem/169284832
>
Antoine Quint
Comment 2
2026-01-30 09:51:05 PST
Pull request:
https://github.com/WebKit/WebKit/pull/57564
EWS
Comment 3
2026-01-30 14:06:11 PST
Committed
306522@main
(a26d2b565969): <
https://commits.webkit.org/306522@main
> Reviewed commits have been landed. Closing PR #57564 and removing active labels.
Antoine Quint
Comment 4
2026-02-12 06:27:50 PST
***
Bug 304116
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug